--- a/skin/frontend/greenfarm/default/scss/_var.scss
+++ b/skin/frontend/greenfarm/default/scss/_var.scss
@@ -219,7 +219,9 @@ $c-email-highlighted-background: #FFFDD9;
 $c-email-highlighted-border: #FFF74C;
 
 //
-$bg01 : rgba(248, 248, 248, 0.9);
+$bg01: rgba(248, 248, 248, 0.9);
+$bg02: #d6d6d6;
+$bg03: #869791;
 
 // =============================================
 // Typography
