--- a/skin/frontend/greenfarm/default/scss/_var.scss
+++ b/skin/frontend/greenfarm/default/scss/_var.scss
@@ -102,6 +102,7 @@ $color03: #131313;
 $color04: #f90;
 $color05: #999;
 $color06: #8a8a8a;
+$color07: #444;
 
 // =============================================
 // Base Colors
@@ -222,6 +223,7 @@ $c-email-highlighted-border: #FFF74C;
 $bg01: rgba(248, 248, 248, 0.9);
 $bg02: #d6d6d6;
 $bg03: #869791;
+$bg04: #eee;
 
 // =============================================
 // Typography
