--- a/skin/frontend/greenfarm/default/css/styles.css
+++ b/skin/frontend/greenfarm/default/css/styles.css
@@ -6084,9 +6084,11 @@ p.product-name a:hover {
   text-decoration: line-through;
 }
 .products-items .banner {
+  padding: 10px;
   width: 25%;
   display: inline-block;
   vertical-align: top;
+  background-color: #ffffff;
 }
 
 /* ============================================ *
